--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 	</properties>
-	
+
 	<distributionManagement>
 		<repository>
 			<id>ligson</id>
 			<url>http://nexus.codertostar.com/content/repositories/ligson/</url>
 		</repository>
-		
+
 	</distributionManagement>
 	<build>
 		<plugins>
@@ -98,6 +98,12 @@
 			<artifactId>javacv</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>nu.pattern</groupId>
+			<artifactId>opencv</artifactId>
+			<version>2.4.9-7</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
