--- a/pom.xml
+++ b/pom.xml
@@ -1,122 +1,126 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>vdesktop</groupId>
-	<artifactId>vdesktop</artifactId>
-	<version>1.0</version>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>4.1.1.RELEASE</spring.version>
-		<hibernate.verion>4.2.0.Final</hibernate.verion>
-		<struts2.version>2.3.8</struts2.version>
-		<log4j.version>1.2.17</log4j.version>
-		<cxf.version>2.7.3</cxf.version>
-		<aspectj.version>1.6.2</aspectj.version>
-		<cglib.version>2.2.2</cglib.version>
-		<asm.version>3.3.1</asm.version>
-		<mysql.version>5.0.4</mysql.version>
-		<sitemesh.version>2.4.2</sitemesh.version>
-		<h2db.version>1.3.170</h2db.version>
-		<mail.version>1.4.7</mail.version>
-		<mina.version>2.0.9</mina.version>
-		<poi.version>3.8</poi.version>
-		<codec.version>1.7</codec.version>
-		<bouncycastle.version>140</bouncycastle.version>
-		<quartz.version>2.1.7</quartz.version>
-		<httpclient.version>4.3-beta1</httpclient.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<lwjgl.version>3.0.0b</lwjgl.version>
-	</properties>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>vdesktop</groupId>
+    <artifactId>vdesktop</artifactId>
+    <version>1.0</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.version>4.1.1.RELEASE</spring.version>
+        <hibernate.verion>4.2.0.Final</hibernate.verion>
+        <struts2.version>2.3.8</struts2.version>
+        <log4j.version>1.2.17</log4j.version>
+        <cxf.version>2.7.3</cxf.version>
+        <aspectj.version>1.6.2</aspectj.version>
+        <cglib.version>2.2.2</cglib.version>
+        <asm.version>3.3.1</asm.version>
+        <mysql.version>5.0.4</mysql.version>
+        <sitemesh.version>2.4.2</sitemesh.version>
+        <h2db.version>1.3.170</h2db.version>
+        <mail.version>1.4.7</mail.version>
+        <mina.version>2.0.9</mina.version>
+        <poi.version>3.8</poi.version>
+        <codec.version>1.7</codec.version>
+        <bouncycastle.version>140</bouncycastle.version>
+        <quartz.version>2.1.7</quartz.version>
+        <httpclient.version>4.3-beta1</httpclient.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <lwjgl.version>3.0.0b</lwjgl.version>
+    </properties>
 
-	<distributionManagement>
-		<repository>
-			<id>ligson</id>
-			<url>http://nexus.codertostar.com/content/repositories/ligson/</url>
-		</repository>
+    <distributionManagement>
+        <repository>
+            <id>ligson</id>
+            <url>http://nexus.codertostar.com/content/repositories/ligson/</url>
+        </repository>
 
-	</distributionManagement>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>7</source>
-					<target>7</target>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-source-plugin</artifactId>
-				<configuration>
-					<attach>true</attach>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<repositories>
-		<repository>
-			<id>nexus</id>
-			<url>http://nexus.codertostar.com/content/groups/public/</url>
-		</repository>
-		<repository>
-			<id>ligson</id>
-			<url>http://nexus.codertostar.com/content/repositories/ligson/</url>
-		</repository>
-	</repositories>
-	<dependencies>
-		<dependency>
-			<groupId>net.java.dev.jna</groupId>
-			<artifactId>jna</artifactId>
-			<version>4.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.melloware</groupId>
-			<artifactId>jintellitype</artifactId>
-			<version>1.3.9</version>
-		</dependency>
-		<dependency>
-			<groupId>net.java.dev.jna</groupId>
-			<artifactId>jna-platform</artifactId>
-			<version>4.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.bytedeco</groupId>
-			<artifactId>javacv</artifactId>
-			<version>1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>nu.pattern</groupId>
-			<artifactId>opencv</artifactId>
-			<version>2.4.9-7</version>
-		</dependency>
+    </distributionManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>nexus</id>
+            <url>http://nexus.codertostar.com/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>ligson</id>
+            <url>http://nexus.codertostar.com/content/repositories/ligson/</url>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.melloware</groupId>
+            <artifactId>jintellitype</artifactId>
+            <version>1.3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna-platform</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>nu.pattern</groupId>
+            <artifactId>opencv</artifactId>
+            <version>2.4.9-7</version>
+        </dependency>
 
-		<!-- lwjgl -->
-		<dependency>
-			<groupId>org.lwjgl</groupId>
-			<artifactId>lwjgl</artifactId>
-			<version>${lwjgl.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.lwjgl</groupId>
-			<artifactId>lwjgl-platform</artifactId>
-			<version>${lwjgl.version}</version>
-			<classifier>natives-windows</classifier>
-		</dependency>
+        <!-- lwjgl -->
+        <dependency>
+            <groupId>org.lwjgl</groupId>
+            <artifactId>lwjgl</artifactId>
+            <version>${lwjgl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.lwjgl</groupId>
+            <artifactId>lwjgl-platform</artifactId>
+            <version>${lwjgl.version}</version>
+            <classifier>natives-windows</classifier>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 </project>
